created the home section

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <header class="header">
         <!-- Logo -->
         <a href="#" class="logo">
-            <img src="Logo.png" alt="Coffee Shop Logo">
+            <img src="coffee-shop-logo-royalty-free-vector-coffee-shop-logo-vector-11563061143sqghlqzt5q.png" alt="Coffee Shop Logo">
         </a>
 
         <!-- Navigation -->
@@ -45,5 +45,22 @@
             <i class="fa-solid fa-magnifying-glass"></i>
         </div>
     </header>
+
+    <section class="home animated-section" id="home">
+        <div class="content">
+            <h3>Fresh Coffee In The Morning</h3>
+            <p>Start your day with the perfect cup! Freshly brewed, rich in flavor, and crafted to awaken your senses—Coffee Brew is where every sip feels like home.</p>
+            <a href="" class="btn">Get Yours Now</a>
+        </div>
+    </section>
+
+    <section class="about animated-section" id="about">
+        <h1 class="heading"><span>About</span>Us</h1>
+        <div class="row">
+            <div class="image">
+                <img src="" alt="">
+            </div>
+        </div>
+    </section>
 </body>
 </html>
