created Abous Us section

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <header class="header">
         <!-- Logo -->
         <a href="#" class="logo">
-            <img src="coffee-shop-logo-royalty-free-vector-coffee-shop-logo-vector-11563061143sqghlqzt5q.png" alt="Coffee Shop Logo">
+            <img src="logo image1.png" alt="Coffee Shop Logo">
         </a>
 
         <!-- Navigation -->
@@ -55,12 +55,64 @@
     </section>
 
     <section class="about animated-section" id="about">
-        <h1 class="heading"><span>About</span>Us</h1>
+        <h1 class="heading"><span>About</span> Us</h1>
         <div class="row">
             <div class="image">
-                <img src="" alt="">
+                <img src="img2.jpg" alt="About Us">
+            </div>
+            <div class="content">
+                <h3>What makes our coffee best</h3>
+                <p>Our coffee is crafted from the finest hand-picked beans, roasted to perfection for a rich aroma and bold flavor. Every cup is a blend of passion and quality, designed to awaken your senses and brighten your day!</p>
+                <p>Experience the perfect harmony of flavor and aroma, making every sip truly unforgettable and comforting!</p>
+                <a href="" class="btn">Learn More</a>
             </div>
         </div>
+    </section>
+
+    <section class="menu animated-section" id="menu">
+        <h1 class="heading">Our <span>menu</span></h1>
+        <div class="box-container">
+
+           <div class="box">
+           <img src="menu img3.jpg" alt="menu_img">
+           <h3>Tasty and Healthy</h3> 
+           <div class="price">$15.99 <span>20.99</span></div>  
+           <a href="" class="btn">Add to cart</a>  
+           </div>
+
+           <div class="box">
+           <img src="menu img4.jpg" alt="menu_img">
+           <h3>Tasty and Healthy</h3> 
+           <div class="price">$15.99 <span>20.99</span></div>  
+           <a href="" class="btn">Add to cart</a>  
+           </div>
+
+           <div class="box">
+           <img src="menu img5.jpg" alt="menu_img">
+           <h3>Tasty and Healthy</h3> 
+           <div class="price">$15.99 <span>20.99</span></div>  
+           <a href="" class="btn">Add to cart</a>  
+           </div>
+
+           <div class="box">
+           <img src="menu img6.jpg" alt="menu_img">
+           <h3>Tasty and Healthy</h3> 
+           <div class="price">$15.99 <span>20.99</span></div>  
+           <a href="" class="btn">Add to cart</a>  
+           </div>
+
+           <div class="box">
+           <img src="menu img7.jpg" alt="menu_img">
+           <h3>Tasty and Healthy</h3> 
+           <div class="price">$15.99 <span>20.99</span></div>  
+           <a href="" class="btn">Add to cart</a>  
+           </div>
+
+        </div>
+    </section>
+
+    <section class="products animated-section" id="products">
+        <h1 class=""></h1>
     </section>
 </body>
 </html>
