--- a/index.html
+++ b/index.html
@@ -112,7 +112,77 @@
     </section>
 
     <section class="products animated-section" id="products">
-        <h1 class=""></h1>
+        <h1 class="heading">Our <span>products</span></h1>
+        <div class="box-container">
+
+            <div class="box">
+                <div class="icons">
+                    <a href="" class="fas fa-shopping-cart"></a>
+                    <a href="" class="fas fa-heart"></a>
+                    <a href="" class="fas fa-eye"></a>
+                </div>
+                <div class="image">
+                    <img src="coffepacket 4.jpg" alt="">
+                </div>
+                <div class="content">
+                   <h3>Fresh Coffee</h3> 
+                   <div class="stars">
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star-half-alt"></i>
+                   </div>
+                   <div class="price">$15.99 <span>$20.99</span></div>
+                </div>
+            </div>
+
+            <div class="box">
+                <div class="icons">
+                    <a href="" class="fas fa-shopping-cart"></a>
+                    <a href="" class="fas fa-heart"></a>
+                    <a href="" class="fas fa-eye"></a>
+                </div>
+                <div class="image">
+                    <img src="coffepacket 5.jpg" alt="">
+                </div>
+                <div class="content">
+                   <h3>Fresh Coffee</h3> 
+                   <div class="stars">
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star-half-alt"></i>
+                   </div>
+                   <div class="price">$15.99 <span>$20.99</span></div>
+                </div>
+            </div>
+
+            <div class="box">
+                <div class="icons">
+                    <a href="" class="fas fa-shopping-cart"></a>
+                    <a href="" class="fas fa-heart"></a>
+                    <a href="" class="fas fa-eye"></a>
+                </div>
+                <div class="image">
+                    <img src="coffepacket 1.jpg" alt="">
+                </div>
+                <div class="content">
+                   <h3>Fresh Coffee</h3> 
+                   <div class="stars">
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star-half-alt"></i>
+                   </div>
+                   <div class="price">$15.99 <span>$20.99</span></div>
+                </div>
+            </div>
+        </div>
     </section>
+
+    
 </body>
 </html>
