created review customer part

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                     <a href="" class="fas fa-eye"></a>
                 </div>
                 <div class="image">
-                    <img src="coffepacket 4.jpg" alt="">
+                    <img src="coffepacket 3.jpg" alt="Cofee packet">
                 </div>
                 <div class="content">
                    <h3>Fresh Coffee</h3> 
@@ -144,7 +144,7 @@
                     <a href="" class="fas fa-eye"></a>
                 </div>
                 <div class="image">
-                    <img src="coffepacket 5.jpg" alt="">
+                    <img src="coffepacket 1.jpg" alt="Cofee packet">
                 </div>
                 <div class="content">
                    <h3>Fresh Coffee</h3> 
@@ -166,7 +166,7 @@
                     <a href="" class="fas fa-eye"></a>
                 </div>
                 <div class="image">
-                    <img src="coffepacket 1.jpg" alt="">
+                    <img src="coffepacket 2.jpg" alt="Cofee packet">
                 </div>
                 <div class="content">
                    <h3>Fresh Coffee</h3> 
@@ -182,6 +182,68 @@
             </div>
         </div>
     </section>
+
+    <section class="review animated-section" id="review">
+        <h1 class="heading">Customer's <span>Review</span></h1>
+        <div class="box-container">
+            <div class="box">
+                <img src="quote img.png" alt="" class="quote">
+                <p>I absolutely love Coffee Brew! Every visit is a treat—the aroma of freshly roasted beans, the rich and smooth flavor of each cup, and the friendly atmosphere make it my go-to coffee spot. Whether I’m starting my morning or taking a relaxing break, their coffee never fails to brighten my day and lift my spirits. Truly a perfect experience for every coffee lover!</p>
+                <img src="customer 1.jpeg" alt="customer-review" class="nurik">
+                <h3>Alice Johnson</h3>
+                 <div class="stars">
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star-half-alt"></i>
+                   </div>
+            </div>
+
+            <div class="box">
+                <img src="quote img.png" alt="" class="quote">
+                <p>Coffee Brew has completely changed the way I enjoy coffee. The attention to detail in every cup is remarkable—the flavor is bold yet smooth, and the freshness is unmatched. It’s more than just coffee, it’s an experience that leaves you wanting to come back every single day!</p>
+                <img src="customer 4.jpeg" alt="customer-review" class="nurik">
+                <h3> Bob Smith</h3>
+                 <div class="stars">
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star-half-alt"></i>
+                   </div>
+            </div>
+
+            <div class="box">
+                <img src="quote img.png" alt="" class="quote">
+                <p>I’ve tried many coffee shops, but nothing compares to Coffee Brew. Their blends are perfectly balanced, the service is warm and welcoming, and the atmosphere makes it the perfect place to relax or catch up with friends. It feels like a second home for me.</p>
+                <img src="customer 6.jpeg" alt="customer-review" class="nurik">
+                <h3>Charlie Brown</h3>
+                 <div class="stars">
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star-half-alt"></i>
+                   </div>
+            </div>
+
+            <div class="box">
+                <img src="quote img.png" alt="" class="quote">
+                <p>The first sip had me hooked! Coffee Brew’s dedication to quality and passion for great coffee is clear in every cup. The taste is consistent, the presentation is beautiful, and I always leave with a smile. Definitely the best coffee spot in town!</p>
+                <img src="customer 3.jpg" alt="customer-review" class="nurik">
+                <h3> Diana Prince </h3>
+                 <div class="stars">
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star-half-alt"></i>
+                   </div>
+            </div>
+        </div>
+    </section>
+
 
     
 </body>
