--- a/index.html
+++ b/index.html
@@ -13,8 +13,12 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"/>
 
-      <link rel="stylesheet" href="style.css">
+      <link rel="stylesheet" href="style.css" />
+
+      
   </head>
+  
+
   <body>
     <header class="header">
       <!-- Logo -->
