applied css on about section

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
           and crafted to awaken your senses—Coffee Brew is where every sip feels
           like home.
         </p>
-        <a href="" class="btn">Get Yours Now</a>
+        <a href="" class="btn">Get Yours</a>
       </div>
     </section>
 
