applied css on my contact

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <header class="header">
       <!-- Logo -->
       <a href="#" class="logo">
-        <img src="logo image1.png" alt="Coffee Shop Logo" />
+        <img src="logo img 2.png" alt="Coffee Shop Logo" />
       </a>
 
       <!-- Navigation -->
@@ -91,35 +91,35 @@
       <div class="box-container">
         <div class="box">
           <img src="menu img3.jpg" alt="menu_img" />
-          <h3>Tasty and Healthy</h3>
+          <h3>Veloura Brew</h3>
           <div class="price">$15.99 <span>20.99</span></div>
           <a href="" class="btn">Add to cart</a>
         </div>
 
         <div class="box">
           <img src="menu img4.jpg" alt="menu_img" />
-          <h3>Tasty and Healthy</h3>
+          <h3>Grandeur Beans</h3>
           <div class="price">$15.99 <span>20.99</span></div>
           <a href="" class="btn">Add to cart</a>
         </div>
 
         <div class="box">
           <img src="menu img5.jpg" alt="menu_img" />
-          <h3>Tasty and Healthy</h3>
+          <h3>Velvet Crown Coffee</h3>
           <div class="price">$15.99 <span>20.99</span></div>
           <a href="" class="btn">Add to cart</a>
         </div>
 
         <div class="box">
           <img src="menu img6.jpg" alt="menu_img" />
-          <h3>Tasty and Healthy</h3>
+          <h3>Monarch Roast</h3>
           <div class="price">$15.99 <span>20.99</span></div>
           <a href="" class="btn">Add to cart</a>
         </div>
 
         <div class="box">
           <img src="menu img7.jpg" alt="menu_img" />
-          <h3>Tasty and Healthy</h3>
+          <h3>Élysian Brew</h3>
           <div class="price">$15.99 <span>20.99</span></div>
           <a href="" class="btn">Add to cart</a>
         </div>
@@ -280,30 +280,30 @@
         </div>
       </div>
     </section>
-
-    <section class="Contact animated-section" id="contact">
-      <h1 class="heading"><span>Contact</span> Us</h1>
-      <div class="row">
-        <form action="">
-          <h3>Get in Touch</h3>
-          <div class="inputBox">
-            <span class="fas fa-user"></span>
-            <input type="text" placeholder="name" />
-          </div>
-
-          <div class="inputBox">
-            <span class="fas fa-envelope"></span>
-            <input type="email" placeholder="email" />
-          </div>
-
-          <div class="inputBox">
-            <span class="fas fa-phone"></span>
-            <input type="number" placeholder="number" />
-          </div>
-          <input type="submit" value="Contact now" class="btn" />
-        </form>
+<section class="contact animated-section" id="contact">
+  <h1 class="heading"><span>Contact</span> Us</h1>
+  <div class="row">
+    <form action="">
+      <h3>Get in Touch</h3>
+      <div class="inputBox">
+        <span class="fas fa-user"></span>
+        <input type="text" placeholder="name" />
       </div>
-    </section>
+
+      <div class="inputBox">
+        <span class="fas fa-envelope"></span>
+        <input type="email" placeholder="email" />
+      </div>
+
+      <div class="inputBox">
+        <span class="fas fa-phone"></span>
+        <input type="number" placeholder="number" />
+      </div>
+      <input type="submit" value="Contact now" class="btn" />
+    </form>
+  </div>
+</section>
+
 
     <section class="blogs animated-section" id="blogs">
       <h1 class="heading">Our <span>blogs</span></h1>
