applied css on blogs part

--- a/index.html
+++ b/index.html
@@ -308,13 +308,13 @@
     <section class="blogs animated-section" id="blogs">
       <h1 class="heading">Our <span>blogs</span></h1>
 
-      <div class="container">
+      <div class="box-container">
         <div class="box">
           <div class="image">
             <img src="blog img 1.jpg" alt="blog image" />
           </div>
           <div class="content">
-            <a href="" class="title">Tasty and Refreshing Coffee</a>
+            <a href="" class="title">Awaken Your Senses with Every Sip</a>
             <span>By Raushan Bhardwaj / 31st August, 2025</span>
             <p>
               Discover the secret behind our signature brews, made to energize
@@ -329,7 +329,7 @@
             <img src="blog img 2.jpg" alt="blog image" />
           </div>
           <div class="content">
-            <a href="" class="title">Tasty and Refreshing Coffee</a>
+            <a href="" class="title">Why Freshly Ground Beans Make All the Difference</a>
             <span>By Ananya Sharma / 2nd September, 2025</span>
             <p>
               Discover the secret behind our signature brews, made to energize
@@ -344,7 +344,7 @@
             <img src="blog img 3.jpg" alt="blog image" />
           </div>
           <div class="content">
-            <a href="" class="title">Tasty and Refreshing Coffee</a>
+            <a href="" class="title">Crafting Coffee: A Blend of Passion & Perfection</a>
             <span>By Arjun Mehta / 5th September, 2025</span>
             <p>
               Follow the journey of our coffee beans from lush farms to your
