done with the media query

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Coffee-Website</title>
+    <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- Correct Font Awesome CDN -->
     <link
@@ -14,6 +16,7 @@
       referrerpolicy="no-referrer"/>
 
       <link rel="stylesheet" href="style.css" />
+      <script src="script.js"></script>
 
       
   </head>
